# HotKeyHub

./: CMakeLists.txt  README.md
android/: AndroidManifest.xml
src/QML/: ConnectPane.qml  CustomTabBar.qml  EnterIpPane.qml  GuideSection.qml  HotKeyItem.qml  HotkeyPage.qml  Main.qml  MainWindowPane.qml  MediaPage.qml  StartPane.qml  TouchpadPage.qml
src/cpp/: backend.cpp  backendasio.cpp  backenddatabase.cpp  client.cpp  database.cpp  hotkeydatabase.cpp  main.cpp
src/header/: backend.h  backendasio.h  backenddatabase.h  client.h  database.h  hotkeydatabase.h
